<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="154dp"
            android:layout_height="143dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_photo"
            app:layout_constraintBottom_toTopOf="@+id/reg_edit_button"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/reg_edit_button"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/customize_edit_button"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/profileImageView"
            app:layout_constraintStart_toStartOf="@+id/profileImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toTopOf="@+id/reg_email_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_edit_button">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_change_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_change_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email_field">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_change_bio"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/reg_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="138dp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:text="@string/customize_save_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/reg_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/customize_cancel_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/reg_save_button"
                />
        </android.support.constraint.ConstraintLayout>



    </LinearLayout>
</ScrollView>
